--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/tieUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="test" />
+                android:text="a18888888888" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -55,7 +55,7 @@
                 android:id="@+id/tiePassWord"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="123456" />
+                android:text="qwert888" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -65,6 +65,15 @@
             android:layout_marginTop="@dimen/dp_20"
             android:text="登录"
             android:textSize="@dimen/sp_20" />
+
+        <Button
+            android:id="@+id/toTest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:text="去测试"
+            android:textSize="@dimen/sp_20"
+            android:visibility="gone" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/rememberPassword"
